err/platypus.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Platypus-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/platypus'...
Listing './lib/python3.5/site-packages/platypus/cfg'...
Listing './lib/python3.5/site-packages/platypus/frontend'...
Compiling './lib/python3.5/site-packages/platypus/frontend/grammar.py'...
***   File "./lib/python3.5/site-packages/platypus/frontend/grammar.py", line 95
    print "incorrect grammar ... exiting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/platypus/frontend/lexer.py'...
***   File "./lib/python3.5/site-packages/platypus/frontend/lexer.py", line 52
    print "illegal character ", t.value[0]
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/platypus/shell.py'...
***   File "./lib/python3.5/site-packages/platypus/shell.py", line 16
    print 'error in opening file ', source_filename
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/platypus/simulator'...
Compiling './lib/python3.5/site-packages/platypus/simulator/ir.py'...
***   File "./lib/python3.5/site-packages/platypus/simulator/ir.py", line 27
    print self.label, ':  ','return'
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
